    delattr
  - defattr renamed to setdefaultattr (same as before for def)
  - devicespec introduced:
    it may contain a list of devices, a range of devices, or multiple devices
    identified by regexp. Following commands take a devicespec as argument:
    attr, deleteattr, delete, get, list, set, setstate, trigger

- Boris Sat Dec 29 16:56:00 CET 2007
  - %NAME, %EVENT, %TYPE parameters in notify definition, commandref.html update

- Boris Sun Dec 30 22:35:00 CET 2007
  - added dblog/93_DbLog.pm and samples in contrib directory, commandref.html
    update

- Rudi Mon Dec 31 15:37:19 MET 2007
  - feature: webfrontend/pgm2 converted to a FHEM module
    No more need for a webserver for basic WEB administration. For HTTPS or
    password you still need apache or the like.
    One step closer for complete fhem on the FritzBox.

- Boris Sun Jan 06 13:35:00 CET 2008
  - bugfix: 62_EMEM.pm:  changed reading energy_total_kWh to energy_kWh_w, 
    added energy_kWh (formerly energy_total_kWh)
  - changed em1010.pl accordingly, added em1000em doc for getDevStatus reply
    from device
  - minor changes in fhem.html

- Rudi Tue Jan  8 21:13:08 MET 2008
  - feature: attr global allowfrom <ip-adresses/hostnames>
    If set, only connects from these addresses are allowed. This is to
    "simulate" a little bit of security.

- Rudi Sat Jan 19 18:04:12 MET 2008
  - FHT: multiple commands
    Up to 8 commands in one set, these are transmitted at once to the FHT
  - softbuffer changes
    minfhtbuffer attribute, as otherwise nearly everything will be sent to
    the FHT buffer, so ordering won't take effect.
  - cmd rename
    report1,report2. refreshvalues changed to report1 and report2. refreshvalues
    won't be advertized but still replaced with "report1 255 report2 255"
  - extensive documentation update for the FHT
  - lime-protection changed, as it is an actuator subcommand. Further actuator
    commands added.
